@@ -1,3 +1,10 @@
+2014-11-13  Rene Liebscher <R.Liebscher@gmx.de>
+
+	patch #8504 buspirate: Also support "cpufreq" extended parameter
+        in binary mode
+	* buspirate.c: applied patch + switch off at disable (even when
+        a reset follows) + some general whitespace/tab cleanup
+
 2014-10-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	bug #37441: lockbits in ATxmega + avrdude = problem
